--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <ul class="features-ul list">
             <li class="features-li">
                 <div class="svg-box">
-                <svg class="icon icon-antenna-1">
-                    <use xlink:href="./images/icons.svg#icon-antenna-1"></use>
+                <svg class="svg-second" width="64" height="64">
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
+
                 </div>
                 <h3 class="features-strategy">Strategy</h3>
                 <p class="features-strategy-p">Our goal is to identify the business problem to walk away with the
@@ -63,7 +64,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg/clock 1.svg"></use>
+                        <use href="./images/icons.svg#clock 1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Punctuality</h3>
@@ -73,7 +74,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg/diagram 1.svg"></use>
+                        <use href="./images/icons.svg#diagram 1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Diligence</h3>
@@ -83,7 +84,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.scv/astronaut 1.svg"></use>
+                        <use href="./images/icons.svg#astronaut 1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Technologies</h3>
@@ -122,28 +123,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram 2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -159,28 +160,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram 2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -210,14 +211,14 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -233,28 +234,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram 2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
