--- a/index.html
+++ b/index.html
@@ -123,28 +123,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -160,28 +160,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -197,28 +197,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/instagram 2.svg"></use>
+                                        <use href="./images/icons.svg/instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/twitter 1.svg"></use>
+                                        <use href="./images/icons.svg/twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -234,28 +234,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram 2.svg"></use>
+                                        <use href="./images/icons.svg#instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter 1.svg"></use>
+                                        <use href="./images/icons.svg#twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook 1.svg"></use>
+                                        <use href="./images/icons.svg#facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin 1.svg"></use>
+                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -273,42 +273,42 @@
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo"></use>
+                        <use href="./images/icons.svg#-Logo"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo (1)"></use>
+                        <use href="./images/icons.svg#Logo-(1)"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo (2)"></use>
+                        <use href="./images/icons.svg#Logo-(2)"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo (3)"></use>
+                        <use href="./images/icons.svg#Logo-(3)"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo (4)"></use>
+                        <use href="./images/icons.svg#Logo-(4)"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo (5)"></use>
+                        <use href="./images/icons.svg#Logo-(5)"></use>
                     </svg>
                 </a>
             </li>
@@ -331,28 +331,28 @@
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#instagram 2"></use>
+                            <use href="./images/icons.svg#instagram-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#twitter 1"></use>
+                            <use href="./images/icons.svg#twitter-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#facebook 1"></use>
+                            <use href="./images/icons.svg#facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#linkedin 1"></use>
+                            <use href="./images/icons.svg#linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
