--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#clock 1.svg"></use>
+                        <use href="./images/icons.svg#icon-clock-1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Punctuality</h3>
