--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="features-li">
                 <div class="svg-box">
                 <svg class="svg-second" width="64" height="64">
-                    <use href="./images/icons.svg#icon-antenna-1"></use>
+                    <use href="./images/icons.svg#antenna1"></use>
                 </svg>
 
                 </div>
@@ -64,7 +64,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#icon-clock-1.svg"></use>
+                        <use href="./images/icons.svg#clock-1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Punctuality</h3>
@@ -74,7 +74,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#diagram 1.svg"></use>
+                        <use href="./images/icons.svg#diagram-1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Diligence</h3>
@@ -84,7 +84,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#astronaut 1.svg"></use>
+                        <use href="./images/icons.svg#astronaut-1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Technologies</h3>
