--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="features-li">
                 <div class="svg-box">
                 <svg class="svg-second" width="64" height="64">
-                    <use href="./images/icons.svg#antenna1"></use>
+                    <use href="./images/icons.#svg#icon-antenna1"></use>
                 </svg>
 
                 </div>
