--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li class="features-li">
                 <div class="svg-box">
                 <svg class="svg-second" width="64" height="64">
-                    <use href="./images/icons.#svg#icon-antenna-1"></use>
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
 
                 </div>
@@ -85,7 +85,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#icon-astronaut-1.svg"></use>
+                        <use href="./images/icons.svg#astronaut-1.svg"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Technologies</h3>
@@ -124,28 +124,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -161,28 +161,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -198,28 +198,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg/twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -235,28 +235,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -274,42 +274,42 @@
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#-Logo"></use>
+                        <use href="./images/icons.svg#icon-Logo"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo-(1)"></use>
+                        <use href="./images/icons.svg#icon-Logo-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo-(2)"></use>
+                        <use href="./images/icons.svg#icon-Logo-2"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo-(3)"></use>
+                        <use href="./images/icons.svg#icon-Logo-3"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo-(4)"></use>
+                        <use href="./images/icons.svg#icon-Logo-4"></use>
                     </svg>
                 </a>
             </li>
             <li class="fifth-list-item">
                 <a href="#" class="fifth-link link">
                     <svg class="fifth-svg" width="104" height="56">
-                        <use href="./images/icons.svg#Logo-(5)"></use>
+                        <use href="./images/icons.svg#icon-Logo-5"></use>
                     </svg>
                 </a>
             </li>
@@ -332,28 +332,28 @@
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#instagram-2"></use>
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#twitter-1"></use>
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#facebook-1"></use>
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="fourth-item">
                     <a class="footer-icon-svg link" href="#">
                         <svg class="footer-icon" width="24" height="24">
-                            <use href="./images/icons.svg#linkedin-1"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
