--- a/portfolio.html
+++ b/portfolio.html
@@ -211,28 +211,28 @@
                     <li class="fourth-item">
                         <a class="footer-icon-svg link" href="#">
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#instagram-2"></use>
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="fourth-item">
                         <a class="footer-icon-svg link" href="#">
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#twitter-1"></use>
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="fourth-item">
                         <a class="footer-icon-svg link" href="#">
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#facebook-1"></use>
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="fourth-item">
                         <a class="footer-icon-svg link" href="#">
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#linkedin-1"></use>
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
                             </svg>
                         </a>
                     </li>
