--- a/index.html
+++ b/index.html
@@ -124,28 +124,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -161,28 +161,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -198,28 +198,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -235,28 +235,28 @@
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-instagram-2.svg"></use>
+                                        <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-facebook-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="fourth-item">
                                 <a class="fourth-icon-svg link" href="#">
                                     <svg class="fourth-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-linkedin-1.svg"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
                             </li>
