--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#icon-clock-1.svg"></use>
+                        <use href="./images/icons.svg#icon-clock-1"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Punctuality</h3>
@@ -75,7 +75,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#icon-diagram-1.svg"></use>
+                        <use href="./images/icons.svg#icon-diagram-1"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Diligence</h3>
@@ -85,7 +85,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#astronaut-1.svg"></use>
+                        <use href="./images/icons.svg#astronaut-1"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Technologies</h3>
