--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li class="features-li">
                 <div class="svg-box">
                     <svg class="svg-second" width="64" height="64">
-                        <use href="./images/icons.svg#astronaut-1"></use>
+                        <use href="./images/icons.svg#icon-astronaut-1"></use>
                     </svg>
                 </div>
                 <h3 class="features-strategy">Technologies</h3>
