--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div class="modal">
         <button type="button" class="modal-button" data-modal-close>
             <svg class="modal-button-svg" width="8" height="8">
-                <use href="./images/modal.svg#icon-modal"></use>
+                <use href="./images/modal.svg#clip0_297024_954"></use>
             </svg>
         </button>
     </div>
